doc: add server preload and hubble deploy